--- a/1. Tasks/Модуль №1. Операторы ввода-вывода.ipynb
+++ b/1. Tasks/Модуль №1. Операторы ввода-вывода.ipynb
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "39pJtqW47wxS",
         "outputId": "ab9b5d73-4048-437e-aff0-f3249c78aabe",
@@ -86,7 +86,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -121,7 +121,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,7 +156,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -192,7 +192,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -217,14 +217,29 @@
     {
       "cell_type": "code",
       "source": [
-        "a=input('Введите число:')\n",
-        "print(int(a)"
+        "a=int(input('Введите число:'))\n",
+        "h=(a//3600)\n",
+        "m=(a//60)\n",
+        "print(h,m)"
       ],
       "metadata": {
-        "id": "O2va8wTa9dnG"
+        "id": "O2va8wTa9dnG",
+        "outputId": "9cd8fb85-80ff-42df-e159-420048c5af28",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Введите число:3900\n",
+            "1 65\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -238,13 +253,43 @@
     {
       "cell_type": "code",
       "source": [
-        "# Ваш код"
+        "a1=int(input('Введите число:'))\n",
+        "a2=int(input('Введите число:'))\n",
+        "a3=int(input('Введите число:'))\n",
+        "b1=int(input('Введите число:'))\n",
+        "b2=int(input('Введите число:'))\n",
+        "b3=int(input('Введите число:'))\n",
+        "h1=a1*3600\n",
+        "m1=a2*60\n",
+        "h2=b1*3600\n",
+        "m2=b2*60\n",
+        "x=h1+m1+a3\n",
+        "y=h2+m2+b3\n",
+        "print(abs(x-y))"
       ],
       "metadata": {
-        "id": "Qmhzx5os9m9Y"
+        "id": "Qmhzx5os9m9Y",
+        "outputId": "d24ef79a-7924-476d-c40a-bfa00d6a504b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Введите число:1\n",
+            "Введите число:2\n",
+            "Введите число:30\n",
+            "Введите число:1\n",
+            "Введите число:3\n",
+            "Введите число:20\n",
+            "50\n"
+          ]
+        }
+      ]
     }
   ]
 }
