--- a/Tasks/Модуль №7. Словари.ipynb
+++ b/Tasks/Модуль №7. Словари.ipynb
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "0EZLIlh-Opa1",
         "outputId": "5099a985-9c75-4f1f-d65f-2b4f28f5e55b",
@@ -75,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "YozqjtH-OpkK",
         "outputId": "de149606-9e3f-435e-8df7-5fc86c4b56b0",
@@ -118,12 +118,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "id": "z9E4gf4oOpp5"
+        "id": "z9E4gf4oOpp5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b7dc8bd3-9a1f-4652-e317-f9c067f1a33f"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "смит 10\n",
+            "смит 5\n",
+            "доу 9\n",
+            "доу 8\n",
+            "смит 1\n",
+            "доу 17\n",
+            "смит 16\n"
+          ]
+        }
+      ],
+      "source": [
+        "n=int(input())\n",
+        "d={}\n",
+        "for i in range(n):\n",
+        "  key,value=input().split()\n",
+        "  if key in d.keys():\n",
+        "    d[key]=d.get(key)+int(value)\n",
+        "  elif key not in d.keys():\n",
+        "    d[key]=int(value)\n",
+        "for key, value in sorted(d.items()):\n",
+        "  print(key, value)\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -136,13 +166,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
-        "id": "76hJaISeOptk"
+        "id": "76hJaISeOptk",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0feb75a5-8a61-416c-864c-376a791c6764"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "apple orange banana\n",
+            "banana orange\n",
+            "orange\n"
+          ]
+        }
+      ],
       "source": [
-        "# Ваш код"
+        "n=int(input())\n",
+        "d={}\n",
+        "for n in range(n):\n",
+        "  words=input().split()\n",
+        "  for word in words:\n",
+        "    if word in d.keys(): d[word]=d.get(word)+1\n",
+        "    elif word not in d.keys(): d[word]=1\n",
+        "  for key, value in sorted(d.items()):\n",
+        "      max=0\n",
+        "      if d[key]>max: max=d[key]\n",
+        "print(list(d.keys())[list(d.values()).index(max)])"
       ]
     },
     {
@@ -156,13 +211,43 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
-        "id": "xV1edOx2OpwJ"
+        "id": "xV1edOx2OpwJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 106
+        },
+        "outputId": "1c3972af-b098-446b-bb7e-c0cbfe6000e3"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax (<ipython-input-13-9ba81ac7b359>, line 3)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-9ba81ac7b359>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    'R':'read'\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ],
       "source": [
-        "# Ваш код"
+        "d={\n",
+        "'W':'write'\n",
+        "            'R':'read'\n",
+        "            'X':'execute'\n",
+        "        }\n",
+        "        f,ans={},[]\n",
+        "        for i in range (int(input())):\n",
+        "          a=input().split()\n",
+        "          namefile, operations= a[0], a[1:]\n",
+        "          f[namefile]=operations\n",
+        "        for i in range (int(input())):\n",
+        "          a=input().split()\n",
+        "          work, namefile_=a[0], a[1]\n",
+        "          tasks=[d[i] for i in f[namefile_]]\n",
+        "          if work in tasks: ans.append('OK')\n",
+        "          else: ans.append('Denied')\n",
+        "        print('\\\\n'.join(ans))"
       ]
     },
     {
@@ -185,13 +270,49 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
-        "id": "MSPxuo5NOpyh"
+        "id": "MSPxuo5NOpyh",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 280
+        },
+        "outputId": "35871ba8-d479-458e-81d3-815435fbe4ef"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "2\n",
+            "usa boston\n",
+            "3\n",
+            "cardiff\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "invalid literal for int() with base 10: 'cardiff'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-15-193025f0241d>\u001b[0m in \u001b[0;36m<cell line: 6>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m   \u001b[0mcountry\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcity\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0md\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcountry\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcity\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0mc\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mcountry\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcity\u001b[0m \u001b[0;32min\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 'cardiff'"
+          ]
+        }
+      ],
       "source": [
-        "# Ваш код"
+        "d,ans={},[]\n",
+        "for i in range (int(input())):\n",
+        "  a=input().split()\n",
+        "  country, city=a[0], a[1:]\n",
+        "  d[country]=city\n",
+        "for i in range (int(input())):\n",
+        "    c=input()\n",
+        "    for country, city in d.items():\n",
+        "     if c in city: ans.append(country)\n",
+        "print('\\\\n'.join(ans))"
       ]
     },
     {
@@ -209,13 +330,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
-        "id": "TStU6BsNOp1G"
+        "id": "TStU6BsNOp1G",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 106
+        },
+        "outputId": "0ff86edf-9455-47f8-ab7a-d7a6ea5a1b9d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "IndentationError",
+          "evalue": "unindent does not match any outer indentation level (<tokenize>, line 7)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<tokenize>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    sorted_d=sorted(d.items(), key=lambda x:x[1], reverse=True)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
+          ]
+        }
+      ],
       "source": [
-        "# Ваш код"
+        "d={}\n",
+        "for i in range (int(input())):\n",
+        "          a=input().split()\n",
+        "          for word in a:\n",
+        "            if word in d.keys(): d[word]=d.get(word)+1\n",
+        "            elif word not in d.keys(): d[word]=1\n",
+        "        sorted_d=sorted(d.items(), key=lambda x:x[1], reverse=True)\n",
+        "        con_d =dict(sorted_d)\n",
+        "        for key, value in (con_d.items()):\n",
+        "          print(f'{key} {value}')"
       ]
     },
     {
