--- a/Tasks/Модуль №4. Ветвление.ipynb
+++ b/Tasks/Модуль №4. Ветвление.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Tatiana164/Univercity-/blob/main/1.%20%D0%97%D0%B0%D0%B4%D0%B0%D0%BD%D0%B8%D1%8F/%D0%9C%D0%BE%D0%B4%D1%83%D0%BB%D1%8C%20%E2%84%964.%20%D0%92%D0%B5%D1%82%D0%B2%D0%BB%D0%B5%D0%BD%D0%B8%D0%B5.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Tatiana164/Univercity-/blob/main/Tasks/%D0%9C%D0%BE%D0%B4%D1%83%D0%BB%D1%8C%20%E2%84%964.%20%D0%92%D0%B5%D1%82%D0%B2%D0%BB%D0%B5%D0%BD%D0%B8%D0%B5.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "DK55kJAgKZna",
         "outputId": "58b5bea2-620e-456d-9e4e-74376073cfef",
@@ -73,7 +73,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "BiQ3IHAPKZus",
         "outputId": "9556c727-66fb-4bf0-f12e-5fa522b13a7a",
@@ -110,7 +110,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "5ND8zm9NKZz3",
         "outputId": "f36ab7fc-d654-4e74-938e-999501ab5e99",
@@ -146,7 +146,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "yNkJFYfeKZ4L",
         "outputId": "80ce7d21-433b-4f0c-f91a-dd26679f58fe",
@@ -181,7 +181,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "MTsEFOygKZ8k",
         "outputId": "f137277b-6df3-4c1e-ea16-c3e4ae39bc7c",
@@ -218,7 +218,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "qihPbD8oKaEv",
         "outputId": "be995c95-2acd-430a-f8fc-4353e7e2555a",
@@ -253,7 +253,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "rnbGpsZeKcFO",
         "outputId": "f43ab839-5d65-41d4-ad7a-3cf8c81336ef",
@@ -288,7 +288,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "LTZAtKHWKcIk",
         "outputId": "bc6ae0cb-b092-4e05-b9a2-5bcc85961612",
@@ -324,7 +324,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "iM0C5CLKKcLD",
         "outputId": "94c14951-5011-4247-8e25-ff415083794d",
@@ -364,7 +364,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "E0vmAO-JKcNc",
         "outputId": "aaac25e7-cfc4-4ae3-a717-8440262b67ef",
@@ -401,7 +401,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "GM7OfGbLKcPc",
         "outputId": "86ea989e-ab4c-4701-8184-4e5bebcd46fb",
@@ -442,12 +442,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "38wUUO58KcR6"
+        "id": "38wUUO58KcR6",
+        "outputId": "151a807a-0076-4a1f-acd0-c2fd11842cf7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n",
+            "31\n",
+            "1-4-2024\n"
+          ]
+        }
+      ],
+      "source": [
+        "m=int(input())\n",
+        "d=int(input())\n",
+        "s=(31, 28, 31, 30, 31, 30, 31, 31, 30, 31, 30, 31)\n",
+        "if m == 2 and d == 29 or d == 28:\n",
+        "  print(f'1-3-2024')\n",
+        "elif d < s[m - 1]:\n",
+        "  print(f'{d + 1}-{m}-2024')\n",
+        "elif m == 12:\n",
+        "  print(f'1.1-2025')\n",
+        "elif d == s[m - 1]:\n",
+        "  print(f'1-{m + 1}-2024')"
+      ]
     }
   ]
 }
