--- a/ExtraTasks/ДопЗадание2.ipynb
+++ b/ExtraTasks/ДопЗадание2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM3WKhBkaqRvA8uqrMNAH88",
+      "authorship_tag": "ABX9TyO+/MXRzHRG5HM0narYMqjF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,46 +34,142 @@
       },
       "outputs": [],
       "source": [
-        "def standartize_name():\n",
-        "  return name.title()\n",
+        "def standartize_name(name: str) -> str:\n",
+        "    \"\"\"\n",
+        "    Стандартизирует имя контакта делая первую букву слова заглавной.\n",
+        "    :param name: Имя контакта (строка).\n",
+        "    :return: Стандартизированное имя (строка).\n",
+        "    \"\"\"\n",
+        "    return name.title()\n",
         "\n",
-        "def standartize_phone(phone):\n",
-        "      phone_digits=''.join(char for char in phone if char.isdigit())\n",
-        "      if len (phone_digits)==10:\n",
+        "\n",
+        "def standartize_phone(phone: str) -> str:\n",
+        "    \"\"\"\n",
+        "    Стандартизирует время телефона приводя его к виду \"+79*********\".\n",
+        "    :param phone: Номер телефона (строка).\n",
+        "    :return: Стандартизированный номер (строка).\n",
+        "    \"\"\"\n",
+        "    phone_digits = ''.join(char for char in phone if char.isdigit())\n",
+        "\n",
+        "    if len(phone_digits) < 10:\n",
+        "        return \"Попробуйте ещё раз.\"\n",
+        "\n",
+        "    elif len(phone_digits) == 10:\n",
         "        return '+7' + phone_digits\n",
-        "      elif len (phone_digits)==11:\n",
+        "\n",
+        "    elif len(phone_digits) == 11:\n",
         "        return '+7' + phone_digits[1:]\n",
         "\n",
-        "def add_contact(phone_book):\n",
-        "        name=input('Введите имя коьнтакта:')\n",
-        "        phone=input('Введите номер контакта')\n",
-        "        standartize_name=standartize_name(name)\n",
-        "        standartize_phone=standartize_name(phone)\n",
+        "    elif len(phone_digits) > 11:\n",
+        "        return \"Слишком много цифр, попробуйте ещё раз.\"\n",
         "\n",
-        "        new_phone_book=phone_book.copy()\n",
-        "def delete_contact():\n",
+        "    return phone_digits\n",
         "\n",
         "\n",
+        "def add_contact(phone_book: dict) -> dict:\n",
+        "    \"\"\"\n",
+        "    Добавляет новый контакт.\n",
+        "    :param phone_book: Телефонная книга (словарь).\n",
+        "    :return: Телефонная книга с добавленным набранным номером (словарь).\n",
+        "    \"\"\"\n",
+        "    name = input('Введите имя контакта: ')\n",
+        "    phone = input('Введите номер телефона в формате \"9*********\" : ')\n",
         "\n",
-        "def menu():\n",
-        "  phone_book={}\n",
-        "  while True:\n",
-        "    print(\"\\nВыберите функцию:\")\n",
-        "    print(\"1. Добавьте контакт:\")\n",
-        "    print(\"3. :\")\n",
-        "    print(\"4. Изменить номер:\")\n",
-        "    print(\"5. Выход:\")\n",
-        "    choice=input(\"Введите номер функции:\")\n",
-        "    if choice==\"1\":\n",
-        "      phone_book=add_contact(phone_book)\n",
-        "    elif choice==\"2\":\n",
-        "      phone_book=add_contact(phone_book)\n",
-        "    elif choice==\"3\":\n",
-        "      phone_book=add_contact(phone_book)\n",
-        "    elif choice==\"4\":\n",
-        "      phone_book=add_contact(phone_book)\n",
-        "    elif choice==\"5\":\n",
-        "      print(\"Выход из программы\")"
+        "    standartized_name = standartize_name(name)\n",
+        "    standartized_phone = standartize_phone(phone)\n",
+        "\n",
+        "    new_phone_book = phone_book.copy()\n",
+        "    new_phone_book[standartized_name] = standartized_phone\n",
+        "    print('Контакт успешно добавлен !')\n",
+        "    return new_phone_book\n",
+        "\n",
+        "\n",
+        "def delete_contact(phone_book: dict) -> dict:\n",
+        "    \"\"\"\n",
+        "    Удаляет выбранный контакт.\n",
+        "    :param phone_book: Телефонная книга (словарь).\n",
+        "    :return: Телефонная книга с удалённым выбранным номером (словарь).\n",
+        "    \"\"\"\n",
+        "    name = input('Введите имя контакта: ')\n",
+        "    standartized_name = standartize_name(name)\n",
+        "\n",
+        "    if standartized_name in phone_book:\n",
+        "        new_phone_book = phone_book.copy()\n",
+        "        del new_phone_book[standartized_name]\n",
+        "        print('Контакт успешно удалён.')\n",
+        "        return new_phone_book\n",
+        "\n",
+        "    else:\n",
+        "        print('Контакт не найден.')\n",
+        "        return phone_book\n",
+        "\n",
+        "\n",
+        "def view_contact(phone_book: dict) -> dict:\n",
+        "    \"\"\"\n",
+        "    Показывает книгу контактов.\n",
+        "    :param phone_book: Телефонная книга (словарь).\n",
+        "    :return: Телефонная книга (словарь).\n",
+        "    \"\"\"\n",
+        "    if not phone_book:\n",
+        "        print('Телефонная книга пуста.')\n",
+        "\n",
+        "    else:\n",
+        "        for name, phone in phone_book.items():\n",
+        "            print(f'{name}: {phone}')\n",
+        "\n",
+        "\n",
+        "def edit_contact(phone_book: dict) -> dict:\n",
+        "    \"\"\"\n",
+        "    Редактирует выбранный контакт.\n",
+        "    :param phone_book: Телефонная книга (словарь).\n",
+        "    :return: Телефонная книга (словарь).\n",
+        "    \"\"\"\n",
+        "    name = input('Введите имя контакта: ')\n",
+        "    standartized_name = standartize_name(name)\n",
+        "\n",
+        "    if standartized_name in phone_book:\n",
+        "        new_phone = input('Введите новый номер телефона в формате \"9*********\" : ')\n",
+        "        standartized_phone = standartize_phone(new_phone)\n",
+        "        new_phone_book = phone_book.copy()\n",
+        "        new_phone_book[standartized_name] = standartized_phone\n",
+        "        print('Номер телефона успешно изменён.')\n",
+        "        return new_phone_book\n",
+        "    else:\n",
+        "        print('Контакт не найден.')\n",
+        "\n",
+        "\n",
+        "def menu() -> None:\n",
+        "    \"\"\"\n",
+        "    Главное меню.\n",
+        "    Выбор 1 из 5 действий.\n",
+        "    \"\"\"\n",
+        "    phone_book = {}\n",
+        "    while True:\n",
+        "        print('\\n Выберите функцию: ')\n",
+        "        print('1. Добавить контакт')\n",
+        "        print('2. Удалить контакт')\n",
+        "        print('3. Показать список контактов')\n",
+        "        print('4. Изменить номер')\n",
+        "        print('5. Выход')\n",
+        "\n",
+        "        choice = input('Введите номер функции: ')\n",
+        "\n",
+        "        if choice == '1':\n",
+        "            phone_book = add_contact(phone_book)\n",
+        "        elif choice == '2':\n",
+        "            phone_book = delete_contact(phone_book)\n",
+        "        elif choice == '3':\n",
+        "            view_contact(phone_book)\n",
+        "        elif choice == '4':\n",
+        "            phone_book = edit_contact(phone_book)\n",
+        "        elif choice == '5':\n",
+        "            print('Выход из программы')\n",
+        "            break\n",
+        "        else:\n",
+        "            print('Неверный выбор, введите другую команду !')\n",
+        "\n",
+        "\n",
+        "menu()"
       ]
     }
   ]
